--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "pn532": "^1.0.0",
+    "rpi-gpio": "^2.1.3",
     "serialport": "^7.1.4"
   },
   "devDependencies": {
