--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "access-control",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,7 +12,8 @@
     "axios": "^0.18.1",
     "pn532": "^1.0.0",
     "rpi-gpio": "^2.1.3",
-    "serialport": "^7.1.4"
+    "serialport": "^7.1.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^24.5.0"
